# parsql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  build-cli.sh  check-build.sh  check-cli.sh  test-migrations-cli.sh  test-view-edit.sh
examples/deadpool-postgres-example/: Cargo.toml
examples/deadpool-postgres-example/src/: main.rs
examples/postgres/: Cargo.toml
examples/postgres-example/: Cargo.toml
examples/postgres-example/src/: main.rs
examples/sqlite-example/: Cargo.toml
examples/sqlite-example/src/: main.rs
examples/tokio-deadpool-postgres/: Cargo.toml
examples/tokio-postgres-example/: Cargo.toml
examples/tokio-postgres-example/src/: main.rs
parsql-cli/: Cargo.toml  README.md
parsql-cli/src/: config.rs  lib.rs  main.rs  utils.rs
parsql-cli/src/commands/: migrate.rs  mod.rs
parsql-cli/src/ui/: app.rs  command_input.rs  components.rs  database.rs  event.rs  help.rs  keys.rs  migration_content_view.rs  migration_creator.rs  migration_detail.rs  migration_executor.rs  migration_list.rs  migration_loader.rs  migration_viewer.rs  mod.rs  output_stream.rs  theme.rs
parsql-cli/tests/: config_tests.rs  integration_tests.rs  utils_tests.rs
parsql-cli/tests/common/: mod.rs
parsql-deadpool-postgres/: README.en.md  README.md
parsql-deadpool-postgres/src/: crud_ops.rs  lib.rs  macros.rs  pool_extensions.rs  traits.rs  transaction_extensions.rs  transactional_ops.rs
parsql-macros/: README.en.md  README.md
parsql-macros/src/: deletable.rs  from_row.rs  insertable.rs  lib.rs  queryable.rs  sql_params.rs  updateable.rs
parsql-migrations/: Cargo.toml  README.md  example_blog.db  no_transaction_test.db  working_example.db
parsql-migrations/examples/: postgres_complete_example.rs  simple_migration.rs  sqlite_complete_example.rs
parsql-migrations/src/: config.rs  deadpool_postgres.rs  error.rs  lib.rs  postgres.rs  postgres_simple.rs  runner.rs  runner_simple.rs  runner_v2.rs  sqlite.rs  sqlite_simple.rs  tokio_postgres.rs  traits.rs  traits_simple.rs  traits_v2.rs  types.rs
parsql-migrations/tests/: async_postgres_test.rs  migration_runner_tests.rs  postgres_integration_test.rs  simple_unit_test.rs  sqlite_integration_test.rs  sqlite_simple_test.rs
parsql-migrations/tests/common/: mod.rs
parsql-postgres/: README.en.md  README.md
parsql-postgres/benches/: postgres_benches.rs
parsql-postgres/src/: crud_ops.rs  macros.rs  traits.rs  transaction_ops.rs
parsql-sqlite/: Cargo.toml  README.en.md  README.md
parsql-sqlite/benches/: sqlite_benches.rs
parsql-sqlite/src/: crud_ops.rs  macros.rs  traits.rs  transactional_ops.rs
parsql-tokio-postgres/: README.md
parsql-tokio-postgres/benches/: tokio_postgres_benches.rs
parsql-tokio-postgres/src/: crud_ops.rs  traits.rs  transaction_ops.rs
src/: lib.rs  prelude.rs
