[package]
name = "parsql-migrations"
authors.workspace = true
description = "Migration system for parsql - type-safe database migrations"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# Error handling - Latest as of 2024-01-27
thiserror = "2.0"

# Date/time handling - Latest stable as of 2024
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing for checksums
sha2 = "0.10"

# Serialization - Latest as of 2024
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database dependencies (optional) - matching parsql workspace versions
postgres = { version = "0.19", optional = true }
tokio-postgres = { version = "0.7", optional = true }
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }
deadpool-postgres = { version = "0.14", optional = true }

# Async runtime (optional) - Latest stable
tokio = { version = "1.41", features = ["rt", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio", "dep:async-trait"]
sqlite = ["dep:rusqlite"]
deadpool-postgres = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:tokio", "dep:async-trait"]

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[[example]]
name = "simple_migration"

[[example]]
name = "sqlite_complete_example"
required-features = ["sqlite"]

[[example]]
name = "postgres_complete_example"
required-features = ["postgres"]

[lints]
workspace = true
