[package]
name = "postgres-example"
authors.workspace = true
description.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
parsql = { path = "../..", features = ["postgres"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
anyhow = "1.0"
chrono = "0.4"

[lints]
workspace = true
